Fix a layout issue with the reading controls

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -16,7 +16,7 @@ h1 {
 }
 
 /* Reader component */
-.reader--standard-view > div {
+.reader--standard-view .comic-page-container {
     max-width: 1200px;
 }
 .reader--fit-width {
@@ -44,13 +44,13 @@ h1 {
     display: none;
 }
 
-/* Navigation component */
+/* ComicPage component */
 .comic-page {
     display: block;
     max-width: 100%;
 }
 
-/* ComicPage component */
+/* Navigation component */
 .page-navigation {
     display: flex;
     justify-content: space-between;
